@@ -2,6 +2,7 @@ autopartkit (0.64) UNRELEASED; urgency=low
 
   * Clean up evaluator.c, and make sure only the used symbols are
     exported.
+  * Sync fstab format with partconf-mkfstab.
 
  -- Petter Reinholdtsen <pere@debian.org>  Tue, 28 Oct 2003 09:51:13 +0100
 
